identity added, usermodel improved, and scaffolding done

--- a/PexitaMVC/Views/Shared/Error.cshtml
+++ b/PexitaMVC/Views/Shared/Error.cshtml
@@ -1,4 +1,4 @@
-﻿@model PexitaMVC.Presentation.Models.ErrorViewModel
+﻿@model PexitaMVC.Core.Entites.ErrorViewModel
 @{
     ViewData["Title"] = "Error";
 }
