--- a/PexitaMVC/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/PexitaMVC/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,4 +1,4 @@
-@using Microsoft.AspNetCore.Identity
+﻿@using Microsoft.AspNetCore.Identity
 @using PexitaMVC.Areas.Identity
 @using PexitaMVC.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
